--- a/first.html
+++ b/first.html
@@ -2,9 +2,9 @@
 <head>
 <title>my first webpages</title>
 </head>
-<h1>my name is durgesh jaisingkar</h1>
-<h2>my name is durgesh jaisingkar</h2>
-<h3>my name is durgesh jaisingkar</h3>
-<h4>my name is durgesh jaisingkar</h4>
-<h5>my name is durgesh jaisingkar</h5>
+<h1>my name is dipak chalkhor</h1>
+<h2>my name is dipak chalkhor</h2>
+<h3>my name is dipak chalkhor</h3>
+<h4>my name is dipak chalkhor</h4>
+<h5>my name is dipak chalkhor</h5>
 </body>
